# vibetree

./: .gitignore  README.md  apply-theme.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.pnpm-store/v10/index/05/: 1ed5bc30951cefaadb10445ac9314ba0c9135a919dbec3c7352ba206fbd425-semver@6.3.1.json
.pnpm-store/v10/index/06/: d8f604e38ef37a375b21f9f5ef0c817b3111055c6ab9143a9118aee6c1d2ea-detect-libc@2.1.2.json
.sisyphus/: boulder.json
.sisyphus/notepads/changed-files-panel-and-terminal-parity/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: changed-files-panel-and-terminal-parity.md
scripts/: verify-terminal-font-parity.mjs
src/: main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: changes.rs  lib.rs  main.rs  repo.rs  terminal.rs  worktree.rs
src/__tests__/: App.test.ts  ChangesPane.test.tsx  Layout.test.tsx  RepoPane.test.tsx  TerminalInstance.test.tsx  TerminalPane.test.tsx  appState.test.ts  attentionProfiles.test.ts  changes.test.ts  notification.test.ts  promptReady.test.ts  repos.test.ts
src/components/: ChangesPane.tsx  CreateWorktreeModal.tsx  Layout.tsx  RepoPane.tsx  TerminalInstance.tsx  TerminalPane.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx
src/hooks/: useAppState.ts  useChanges.ts  useRepos.ts  useTerminal.ts  useWindowFocus.ts  useWorktrees.ts
src/styles/: layout.css
src/terminal/: attentionProfiles.ts  attentionSignals.ts  notify.ts  promptReady.ts
(+183 files in other folders)
